--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sequelize/postgres": "^7.0.0-alpha.43",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "csv42": "^5.0.0",
     "dotenv": "^16.4.5",
+    "export-from-json": "^1.7.4",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
+    "json-2-csv": "^5.5.6",
+    "json2csv": "^6.0.0-alpha.2",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^3.0.3",
+    "nodemon": "^3.1.7",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5"
